chore: Update social image

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' data: gap: https://ssl.gstatic.com 'unsafe-eval' blob:; style-src * 'unsafe-inline'; media-src *;" />
     <meta name="description" content="Electricity Maps is a live 24/7 visualization of where your electricity comes from and how much CO2 was emitted to produce it." />
     <meta property="og:description" content="Electricity Maps is a live 24/7 visualization of where your electricity comes from and how much CO2 was emitted to produce it." />
-    <meta property="og:image" content="https://app.electricitymaps.com/images/electricitymap_social_image.png" />
+    <meta property="og:image" content="https://app.electricitymaps.com/images/social_image.png" />
     <meta property="og:title" content="Live 24/7 CO₂ emissions of electricity consumption" />
     <meta property="og:type" content="website" />
     <!-- It's important to keep the old og:url, else likes will not accumulate properly -->
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@electricitymaps" />
     <meta name="twitter:description" content="Electricity Maps is a live 24/7 visualization of where your electricity comes from and how much CO2 was emitted to produce it." />
-    <meta name="twitter:image" content="https://app.electricitymaps.com/images/electricitymap_social_image.png" />
+    <meta name="twitter:image" content="https://app.electricitymaps.com/images/social_image.png" />
     <meta name="twitter:site" content="@ElectricityMaps" />
     <meta name="twitter:title" content="@ElectricityMaps | Live 24/7 CO2 emissions of electricity consumption" />
 
