add cookie banner

--- a/web/index.html
+++ b/web/index.html
@@ -149,6 +149,11 @@
       })(window, document, 'script', 'dataLayer', 'GTM-P2QJ3KDQ');
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- CookieYes Banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/e8dc92a5b54e1aaf957f6897/script.js"></script>
+    <!-- End CookieYes banner -->
+
     <script type="module" src="/src/main.tsx"></script>
   </head>
   <body>
