Tonyvanswet/PLG 584 add gtm or hubspot direct intgration to the map (#8008)
* feat(app): add the Google Tag Manager to fire for non-native events

* add cookie banner

--- a/web/index.html
+++ b/web/index.html
@@ -132,9 +132,34 @@
         document.documentElement.classList.remove('dark');
       }
     </script>
+    <!-- Google Tag Manager -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+    </script>
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-P2QJ3KDQ');
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- CookieYes Banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/e8dc92a5b54e1aaf957f6897/script.js"></script>
+    <!-- End CookieYes banner -->
+
     <script type="module" src="/src/main.tsx"></script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P2QJ3KDQ" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <noscript>
       <img src="/images/electricity-maps-logo.svg" alt="Electricity Maps logo" />
       <div>
