Initialization for the Turkish language tr(tr_TR)

--- a/web/index.html
+++ b/web/index.html
@@ -61,6 +61,7 @@
     <meta property="og:locale:alternate" content="sk_SK" />
     <meta property="og:locale:alternate" content="sl_SI" />
     <meta property="og:locale:alternate" content="sv_SE" />
+    <meta property="og:locale:alternate" content="tr_TR" />
     <meta property="og:locale:alternate" content="vi_VN" />
     <meta property="og:locale:alternate" content="zh_CN" />
     <meta property="og:locale:alternate" content="zh_TW" />
@@ -90,6 +91,7 @@
     <link rel="alternate" href="https://app.electricitymaps.com?lang=sk" hreflang="sk" />
     <link rel="alternate" href="https://app.electricitymaps.com?lang=sl" hreflang="sl" />
     <link rel="alternate" href="https://app.electricitymaps.com?lang=sv" hreflang="sv" />
+    <link rel="alternate" href="https://app.electricitymaps.com?lang=tr" hreflang="tr" />
     <link rel="alternate" href="https://app.electricitymaps.com?lang=vi" hreflang="vi" />
     <link rel="alternate" href="https://app.electricitymaps.com?lang=zh-CN" hreflang="zh-CN" />
     <link rel="alternate" href="https://app.electricitymaps.com?lang=zh-TW" hreflang="zh-TW" />
