fix(CY): fix CY wind and conventional column name when parsing html

--- a/parsers/test/mocks/CY/response_realtime_20240401.html
+++ b/parsers/test/mocks/CY/response_realtime_20240401.html
@@ -69,10 +69,10 @@
                                         <tr>
                                             <th>Timestamp</th>
                                             <th>Συνολική Διαθέσιμη Συμβατική Ικανότητα Παραγωγής</th>
-                                            <th>Αιολική Παραγωγή</th>
+                                            <th>Αιολική Παραγωγή στο ΣΜ</th>
                                             <th>Εκτίμηση Διεσπαρμένης Παραγωγής</th>
                                             <th>Συνολική Ζήτηση</th>
-                                            <th>Συμβατική Παραγωγή</th>
+                                            <th>Συμβατική Παραγωγή στο ΣΜ</th>
                                         </tr>
                                     </thead>
                                     <tbody>
